# Wicklee

./: .env.agent  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOVER.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  claude.md  entrypoint.sh  index.html  install.sh  metadata.json  nginx.conf  package-lock.json  package.json  progress.md  railway.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml
agent/src/: cloud_push.rs  diagnostics.rs  harvester.rs  inference.rs  main.rs  process_discovery.rs  proxy.rs  runtime_config.rs  scoring.rs  service.rs  store.rs  supervisor.rs
cloud/: Cargo.toml  Dockerfile  railway.toml
cloud/data/: perplexity_baseline.json
cloud/src/: main.rs
components/: AIInsights.tsx  Overview.tsx  PreferencesView.tsx  ProfileView.tsx  SecurityView.tsx  Sidebar.tsx  TeamManagement.tsx
docs/: INSIGHTS.md  ROADMAP.md  SECURITY.md  SPEC.md  TIERS.md  gtm-plan-500k-arr.md  leaderboard-charter.md  metrics.md  progress-archive.md  progress.md
docs/context/: CLAUDE_MEM.md  SPEC.md
public/: _redirects  api.md  docs.md  install.ps1  install.sh  llms-full.txt  llms.txt  metrics.md  openapi.json  robots.txt  sitemap.xml
public/.well-known/: ai-plugin.json
public/blog/: apple-silicon-thermal-throttling.md  hardware-aware-observability.md  index.json  runtime-config-surface.md  wes-the-mpg-for-local-ai-inference.md
scripts/: gen-og-image.mjs  generate-static-pages.mjs  load_gen.py  qa_agent.sh  sync-perplexity.mjs  sync-scoring.mjs
shared/: scoring.rs
src/: App.tsx  index.css  index.tsx  types.ts
src/blog/: registry.ts
src/components/: AIInsights.tsx  AIProvidersView.tsx  APIKeysView.tsx  AddNodeModal.tsx  AuthModal.tsx  BenchmarkReportModal.tsx  BlogListing.tsx  BlogPost.tsx  ClerkAccountActions.tsx  CloudApp.tsx  ErrorBoundary.tsx  EventFeed.tsx  Header.tsx  LandingPage.tsx  Logo.tsx  MetricTooltip.tsx  MetricsHistoryChart.tsx  MobileTabBar.tsx  ModelsPage.tsx  NodeHardwarePanel.tsx  NodesList.tsx  Overview.tsx  PairingModal.tsx  PreferencesView.tsx  PricingPage.tsx  ProfileView.tsx  RuntimeConfigModal.tsx  ScaffoldingView.tsx  SecurityView.tsx  SettingsView.tsx  Sidebar.tsx  SignInPage.tsx  SignUpPage.tsx  SubscriptionGuard.tsx  SustainabilityView.tsx  TeamManagement.tsx  TracesView.tsx  WESHistoryChart.tsx
src/components/insights/: AccordionObservationCard.tsx  CompactMonitoringStrip.tsx  DiscoveryHoverCard.tsx  FleetHeaderBar.tsx  FleetModelDiscovery.tsx  FleetObservationCard.tsx  InsightCard.tsx  InsightsBriefingCard.tsx  InsightsGlobalStatusRail.tsx  InsightsLiteCard.tsx  InsightsLockedCard.tsx  InsightsTeaseCard.tsx  ModelDiscoveryCard.tsx  ModelFitCard.tsx  ModelFitMiniTile.tsx  ModelFitSummaryStrip.tsx  ObservationCard.tsx  ThermalBudgetCard.tsx
src/components/insights/tier1/: MemoryExhaustionCard.tsx  PowerAnomalyCard.tsx  ThermalCostAlertCard.tsx  ThermalDegradationCard.tsx
src/components/insights/tier2/: IdleResourceCard.tsx  ModelEvictionCard.tsx  ModelFitAnalysis.tsx  ModelFitInsightCard.tsx  QuantizationROICard.tsx  SiliconFitAudit.tsx
src/components/settings/: WebhooksSection.tsx
src/components/shared/: HexHive.tsx
src/contexts/: FleetStreamContext.tsx
src/hooks/: useEventHistory.ts  useFleetCounts.ts  useFleetDuty.ts  useFleetObservations.ts  useInsightDismiss.ts  useLocalEvents.ts  useLocalObservations.ts  useMetricHistory.ts  usePermissions.ts  useRollingMetrics.ts  useSettings.ts
src/lib/: insightLifecycle.ts  patternEngine.ts
src/pages/: DocsPage.tsx  LegalPage.tsx  MetricsPage.tsx
src/types/: observations.ts  paddle.d.ts
src/utils/: benchmarkReport.ts  chipBandwidth.ts  cloudUrl.ts  efficiency.ts  kvCache.ts  modelCategory.ts  modelFit.ts  modelHistory.ts  pageMeta.ts  parseFrontmatter.ts  perplexity.ts  power.ts  quantQuality.ts  quantSize.ts  quantSweet.ts  sharedSmoothing.ts  time.ts  wes.ts
src/utils/__tests__/: chipBandwidth.test.ts  fixtures.ts  kvCache.test.ts  modelFit.test.ts  quantSize.test.ts  quantSweet.test.ts  sharedSmoothing.test.ts
