[package]
name = "wicklee-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum          = { version = "0.7", features = ["ws"] }
tokio         = { version = "1",   features = ["full"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
tower-http    = { version = "0.5", features = ["cors"] }
sysinfo       = "0.30"
sysctl        = "0.5"
nvml-wrapper  = "0.10"
# Embed the compiled frontend into the binary at compile time.
# `compression` applies Brotli to each asset, keeping binary size tight.
rust-embed    = { version = "8",   features = ["compression"] }
mime_guess    = "2"
# ReceiverStream — turns a tokio mpsc channel into an async Stream for SSE.
tokio-stream  = "0.1"

# ── Release profile: optimise for binary size ─────────────────────────────────
# Goal: stay as close to the "Zero-Tax" spirit as possible with a UI included.
[profile.release]
opt-level     = "z"   # Optimise for size over speed
lto           = true  # Cross-crate dead-code elimination
codegen-units = 1     # Single unit allows the most aggressive inlining + DCE
strip         = true  # Strip debug symbols from the final ELF/Mach-O
panic         = "abort" # Remove stack-unwinding machinery (~20 KB savings)
