[package]
name = "wicklee-agent"
version = "0.5.14"
edition = "2024"

[dependencies]
axum          = { version = "0.7", features = ["ws"] }
tokio         = { version = "1",   features = ["full"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
scopeguard    = "1"
toml          = "0.8"
tower-http    = { version = "0.5", features = ["cors"] }
sysinfo       = "0.30"
# Embed the compiled frontend into the binary at compile time.
# `compression` applies Brotli to each asset, keeping binary size tight.
rust-embed    = { version = "8",   features = ["compression"] }
mime_guess    = "2"
# ReceiverStream — turns a tokio mpsc channel into an async Stream for SSE.
tokio-stream  = "0.1"
# UUID v4 for trace IDs (inference request tracing).
uuid          = { version = "1", features = ["v4"] }
# Outbound HTTPS for cloud pairing registration.
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# Binary self-replacement for the auto-update flow.
# default-features = false: we use reqwest directly for downloads; only need self_replace().
self_update   = { version = "0.41", default-features = false }
# Local metrics store — three-tier DuckDB schema (raw 1Hz / 1-min / 1-hr).
# `bundled` compiles DuckDB from source for a fully self-contained binary.
# Gated to non-musl targets: musl static linking + DuckDB C++ is unsupported;
# musl builds (Alpine, static distroless) skip the store and history API.
# Note: first build adds ~8 min compile time; subsequent builds are cached.
[target.'cfg(not(target_env = "musl"))'.dependencies]
duckdb        = { version = "1.1", features = ["bundled"] }

# ── Platform-specific dependencies ────────────────────────────────────────────
# sysctl exposes macOS/Linux kernel tunables — not available on Windows.
[target.'cfg(not(target_os = "windows"))'.dependencies]
sysctl        = "0.5"
libc          = "0.2"

# nvml-wrapper links against libnvidia-ml which ships with NVIDIA drivers on
# both Linux and Windows. Gating here avoids the link requirement on macOS.
# musl targets can't link or dlopen glibc-based NVIDIA libraries, so we
# exclude nvml-wrapper for musl. GPU metrics fall back gracefully at runtime.
[target.'cfg(all(any(target_os = "linux", target_os = "windows"), not(target_env = "musl")))'.dependencies]
nvml-wrapper     = "0.10"
# nvml-wrapper-sys is the underlying sys crate; we use it directly to access
# nvmlDeviceGetMemoryInfo_v2 (Hopper/Blackwell unified-memory architectures)
# which nvml-wrapper 0.10 doesn't yet expose at the safe-wrapper level.
nvml-wrapper-sys = "0.8"

# ── Release profile: optimise for binary size ─────────────────────────────────
# Goal: stay as close to the "Zero-Tax" spirit as possible with a UI included.
[profile.release]
opt-level     = "z"   # Optimise for size over speed
lto           = true  # Cross-crate dead-code elimination
codegen-units = 1     # Single unit allows the most aggressive inlining + DCE
strip         = true  # Strip debug symbols from the final ELF/Mach-O
panic         = "abort" # Remove stack-unwinding machinery (~20 KB savings)
