[package]
name    = "wicklee-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
bcrypt     = "0.15"
uuid       = { version = "1", features = ["v4"] }
rusqlite       = { version = "0.31", features = ["bundled"] }
tokio-stream   = "0.1"
futures-util   = "0.3"
jsonwebtoken   = "9"
ureq           = { version = "2", features = ["json"] }
# SHA-256 for API key hashing.
sha2           = "0.10"
# HMAC-SHA256 for Stripe webhook signature verification.
hmac           = "0.12"
# Hex encoding for HMAC digest comparison.
hex            = "0.4"
# Constant-time byte comparison for auth tokens — prevents timing side-channel attacks.
subtle         = "2.6"
# DuckDB for time-series analytics (Phase 4A). bundled = compile DuckDB from source (required for Railway).
duckdb         = { version = "1.10501", features = ["bundled"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
