[package]
name    = "wicklee-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
bcrypt     = "0.15"
uuid       = { version = "1", features = ["v4"] }
# Postgres + TimescaleDB via sqlx — async connection pool, replaces both rusqlite and duckdb.
sqlx           = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio-stream   = "0.1"
futures-util   = "0.3"
jsonwebtoken   = "9"
ureq           = { version = "2", features = ["json"] }
# SHA-256 for API key hashing.
sha2           = "0.10"
# HMAC-SHA256 for Paddle webhook signature verification.
hmac           = "0.12"
# Hex encoding for HMAC digest comparison.
hex            = "0.4"
# Constant-time byte comparison for auth tokens — prevents timing side-channel attacks.
subtle         = "2.6"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
